--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       <!-- footer section end -->
       <!-- copyright section start -->
       <div class="copyright_section">
-         <p class="copyright_text">Copyright 2020 All Right Reserved By.<a href="https://html.design"> Free  html Templates</p>
+          <p class="copyright_text">Copyright 2020 All Right Reserved By.<a href=""> LAVIPCO LO., LTD</p>
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
