--- a/services.html
+++ b/services.html
@@ -103,13 +103,13 @@
                <h2 class="addres_text">Addres</h2>
                <div class="row map_addres">
                   <div class="col-sm-12 col-lg-4">
-                     <div class="map_text"><img src="images/map-icon.png"><span class="map_icon">No.123 Chalingt Gates, Supper market New York</span></div>
+                     <div class="map_text"><img src="images/map-icon.png"><span class="map_icon">63/23A, Liên khu 16-18, Bình Trị Đông, Bình Tân</span></div>
                   </div>
                   <div class="col-sm-12 col-lg-4">
-                     <div class="map_text"><img src="images/phone-icon.png"><span class="map_icon">( +71 7986543234 )</span></div>
+                     <div class="map_text"><img src="images/phone-icon.png"><span class="map_icon">( +84 989725507 - 868129933 )</span></div>
                   </div>
                   <div class="col-sm-12 col-lg-4">
-                     <div class="map_text"><img src="images/email-icon.png"><span class="map_icon">demo@gmail.com</span></div>
+                     <div class="map_text"><img src="images/email-icon.png"><span class="map_icon">mvulam@gmail.com</span></div>
                   </div>
                </div>
                <div class="social_icon">
@@ -126,7 +126,7 @@
       <!-- footer section end -->
       <!-- copyright section start -->
       <div class="copyright_section">
-         <p class="copyright_text">Copyright 2020 All Right Reserved By.<a href="https://html.design"> Free  html Templates</p>
+         <p class="copyright_text">Copyright 2020 All Right Reserved By.<a href=""> LAVIPCO LO., LTD</p>
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
